--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.android.volley:volley:1.1.1'
+    // https://mvnrepository.com/artifact/ch.hsr/geohash
+    implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
+
 }
