--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+//noinspection GradleCompatible
 apply plugin: 'com.android.application'
 
 android {
@@ -31,5 +32,11 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     // https://mvnrepository.com/artifact/ch.hsr/geohash
     implementation group: 'ch.hsr', name: 'geohash', version: '1.3.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
