--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchResultActivity"></activity>
+        <activity
+            android:name=".SearchResultActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".DetailPageActivity"
+            android:label="@string/title_activity_detail_page"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".SearchResultActivity"></activity>
     </application>
 
 </manifest>
