--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,20 @@
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".DetailPageActivity"
+            android:parentActivityName=".SearchResultActivity"
             android:label="@string/title_activity_detail_page"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".SearchResultActivity"></activity>
+           >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <!-- Include the host attribute if you want your app to respond
+                     only to URLs with your app's domain. -->
+                <data android:scheme="http" android:host="www.example.com" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <!-- The BROWSABLE category is required to get links from web pages. -->
+                <category android:name="android.intent.category.BROWSABLE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
