--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,9 +41,10 @@
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".DetailPageActivity"
-            android:parentActivityName=".SearchResultActivity"
-            android:label="@string/title_activity_detail_page"
             android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/title_activity_detail_page"
+
            >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
