--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:launchMode="standard"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,9 +42,11 @@
         </activity>
         <activity
             android:name=".SearchResultActivity"
+            android:launchMode="singleTask"
             android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".DetailPageActivity"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".SearchResultActivity"
             android:label="@string/title_activity_detail_page"
